--- a/scss/base/_own-normalize.scss
+++ b/scss/base/_own-normalize.scss
@@ -25,6 +25,7 @@ body {
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
+    z-index: 100;
 }
 h1, h2, h3, h4 {
     text-transform: uppercase;
