--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -1,5 +1,6 @@
 .modal {
     position: fixed;
+    z-index: 101;
     width: 100%;
     top: 10%;
     display: none;
