--- a/scss/components/_nav-menu.scss
+++ b/scss/components/_nav-menu.scss
@@ -6,6 +6,7 @@
     background-color: #000;
     height: 40px;
     position: fixed;
+    z-index: 101;
     top: 0;
     width: 100%;
     box-shadow: 0 0 20px -5px #000;
